# covergen

./: .covergen_gui_graph.json  .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  README.md
.github/bench/: ci_software.thresholds.ini
.github/workflows/: perf-gates.yml
docs/: README.md
docs/help/: in_app_help.md
docs/plans/: index.md
docs/v2/: architecture.md  engine-v1-playground.md  gpu-runtime.md  graph-spec.md  migration.md  preset-authoring.md  rust-gpu.md
examples/graphs/: README.md  circle_noise_feedback_trail.json  marbled_ink_monochrome.json
scripts/: ci_local.ps1  ci_local.sh  run_agent_request.sh
scripts/bench/: hardware_gate_readiness.sh  run.sh  store_handoff_artifacts.ps1  tier_gate.ps1  tier_gate.sh
scripts/gui/: tier_gate.ps1  tier_gate.sh
scripts/lib/: ci_local_steps.tsv  rust_tooling.sh
scripts/lint/: private_docs_subset.ps1  private_docs_subset.sh  private_docs_subset_files.txt  structure_drift_report.ps1  structure_drift_report.sh
scripts/shaders/: build_rust_gpu_artifacts.ps1  build_rust_gpu_artifacts.sh  validate_rust_gpu_artifacts.ps1  validate_rust_gpu_artifacts.sh
shaders/build_spirv/: Cargo.toml
shaders/fractal_main/: Cargo.toml
shaders/graph_decode/: Cargo.toml
src/: analysis.rs  animation.rs  art_direction.rs  blending.rs  chop.rs  cli.rs  compiler.rs  compiler_tests.rs  config.rs  engine.rs  gpu_graph_decode.wgsl  gpu_graph_ops.wgsl  gpu_render.rs  gpu_retained.rs  gpu_retained_post.wgsl  gpu_timestamp.rs  graph.rs  graph_tests.rs  gui.rs  image_ops.rs  main.rs  manifest.rs  model.rs  node.rs  proc_graph.rs  progress.rs  randomization.rs  render_workspace.rs  runtime.rs  runtime_config.rs  runtime_config_tests.rs  runtime_eval.rs  runtime_gpu.rs  runtime_ops.rs  runtime_progress.rs  runtime_selection.rs  runtime_test_support.rs  selection.rs  shader.wgsl  shaders.rs  (+9 more)
tmp/: cleanup_plan.md  perf_plan.md
(+278 files in other folders)
