[package]
name = "covergen"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.24"
pollster = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "0.20", features = ["spirv"] }
