[package]
name = "covergen"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"
missing_docs = "forbid"
non_local_definitions = "allow"

[lints.clippy]
missing_docs_in_private_items = "warn"

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
ffmpeg-sidecar = "2.4.0"
image = "0.24"
mp4 = "0.14"
openh264 = "0.9.3"
pollster = "0.3"
rayon = "1.10"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "0.20", features = ["spirv"] }
winit = "0.29"

[target.'cfg(windows)'.dependencies]
nvenc = "0.1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
] }

[patch.crates-io]
nvenc = { path = "third_party/nvenc" }
